--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,7 @@
 @import url('./Header.css');
 @import url('./CocktailInfoPage.css');
 @import url('./LandingPage.css');
+@import url('./SearchReuslt.css');
 :root {
   font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -51,8 +52,11 @@ body {
   /* margin: 0 auto; */
   /* padding: 2rem; */
   text-align: center;
+  background-color: var(--bgColor);
 }
-
+li {
+  list-style: none;
+}
 h1 {
   margin: 0 auto;
   font-size: 3.2em;
