--- a/src/css/CocktailInfoPage.css
+++ b/src/css/CocktailInfoPage.css
@@ -1,27 +1,58 @@
 .info-card-container {
   display: flex;
   flex-direction: row-reverse;
-  padding: 2rem;
+  padding: 1rem;
   border: var(--border);
   border-radius: var(--borderRadius);
-  margin: 1rem;
+  margin: 2rem 1rem;
+  /* width: 600px; */
+  justify-content: center;
 }
+
 .drink-details {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column-reverse;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .drink-info {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 1.4rem;
+  padding: 0.2rem;
   align-items: center;
 }
 .drink-details-img {
-  width: 300px;
+  width: 100%;
   height: 300px;
+}
+.drink-info-para {
+  text-align: justify;
+  padding-inline: 0.4rem;
+  max-width: 500px;
 }
 .back {
   margin-block: 1rem;
-  width: 50%;
+  /* width: 50%; */
+}
+@media screen and (max-width: 768px) {
+  .info-card-container {
+    padding: 0rem;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+  }
+  .drink-details-img {
+    width: 100%;
+    max-height: 280px;
+  }
+  .drink-details {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .drink-info-para {
+    max-width: 300px;
+  }
 }
