--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import url('./App.css');
 @import url('./Button.css');
 @import url('./Header.css');
 @import url('./CocktailInfoPage.css');
 @import url('./LandingPage.css');
-@import url('./SearchReuslt.css');
+@import url('./Pagination.css');
+@import url('./PaginationList.css');
+@import url('./Search.css');
+@import url('./SearchResult.css');
+
 :root {
   font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -33,6 +38,9 @@
   box-sizing: inherit;
   box-sizing: border-box;
 }
+img {
+  display: block;
+}
 a {
   font-weight: 500;
   color: var(--accentColor);
@@ -59,21 +67,21 @@ li {
 }
 h1 {
   margin: 0 auto;
-  font-size: 3.2em;
+  font-size: 2.6rem;
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6rem 1.2rem;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: var(--bgColor);
   cursor: pointer;
   transition: border-color 0.25s;
-}
+} */
 button:hover {
   border-color: var(--borderColor);
 }
