--- a/src/css/CocktailInfoPage.css
+++ b/src/css/CocktailInfoPage.css
@@ -35,13 +35,60 @@
   margin-block: 1rem;
   /* width: 50%; */
 }
+.ingredient-item {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+.info-list {
+  width: 100px;
+}
+.measure {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-block: 1rem;
+  border: 2px solid var(--iconColor);
+  max-width: 500px;
+}
+.measure span {
+  margin-top: 1.5rem;
+}
+.info-details-section {
+  display: flex;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.span-info {
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  padding: 0.8rem;
+  word-break: break-all;
+  margin-block: 1rem;
+  border-radius: var(--borderRadius);
+  border: 2px solid var(--iconColor);
+  max-width: 500px;
+}
+.span-info label {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 1rem;
+}
+
 @media screen and (max-width: 768px) {
   .info-card-container {
     padding: 0rem;
     margin: 1rem;
     display: flex;
     flex-direction: column;
-    width: 300px;
+    max-width: 100%;
   }
   .drink-details-img {
     width: 100%;
