--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -6,26 +6,29 @@
   color: var(--textColor);
   padding: 0.5rem 2rem;
   width: 100%;
-
   position: fixed;
   top: 0;
+  left: 0;
+  z-index: 1000; /* Ensure the header stays on top */
 }
+
 .logo {
-  width: auto;
   height: 50px;
 }
+
 .header .links {
-  display: flex;
+  /* display: flex; */
   gap: 2rem;
 }
 
 .header .links a {
   color: var(--textColor);
-  /* font-size: 1.2rem; */
+  text-decoration: none;
+  position: relative;
+  font-size: 1.2rem;
 }
+
 .header .links a::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
   content: '';
   position: absolute;
   left: 0;
@@ -33,10 +36,66 @@
   width: 100%;
   height: 2px;
   background-color: var(--bgColor);
-  transform: scale(0);
+  transform: scaleX(0);
+  transform-origin: bottom left;
   transition: 0.2s all ease-in;
 }
+
 .header .links a:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 25px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.hamburger span {
+  width: 40px;
+  display: block;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .links {
+    display: none;
+    flex-direction: column;
+    background-color: var(--bgColor);
+    height: calc(100vh - 10vh);
+    position: absolute;
+    top: 60px; /* Adjust based on your header height */
+    left: 0;
+    width: 100%;
+    padding: 1rem 0;
+    text-align: center;
+  }
+
+  .links.open {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .hamburger.open span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .hamburger.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+  }
 }
