--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -2,7 +2,7 @@
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
   background-color: var(--iconColor);
