--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,11 +4,11 @@
 @import url('./Button.css');
 @import url('./Header.css');
 @import url('./CocktailInfoPage.css');
+@import url('./Input.css');
 @import url('./LandingPage.css');
 @import url('./Pagination.css');
-@import url('./PaginationList.css');
+@import url('./PaginationListPage.css');
 @import url('./Search.css');
-@import url('./SearchPage.css');
 
 :root {
   font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -35,6 +35,8 @@
 *,
 *::before,
 *::after {
+  margin: 0;
+  padding: 0;
   box-sizing: inherit;
   box-sizing: border-box;
 }
@@ -43,7 +45,6 @@ img {
 }
 a {
   font-weight: 500;
-  color: var(--accentColor);
   text-decoration: inherit;
 }
 a:hover {
@@ -51,7 +52,6 @@ a:hover {
 }
 
 body {
-  margin: 0;
   scroll-behavior: smooth;
   display: flex;
   min-width: 320px;
@@ -67,7 +67,7 @@ li {
   list-style: none;
 }
 h1 {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   font-size: 2.6rem;
   line-height: 1.1;
 }
