--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -8,6 +8,7 @@
   border-radius: var(--borderRadius);
   padding: 0.4rem;
   margin: 1rem;
+  box-shadow: var(--boxShadow);
 }
 .random-img {
   width: 200px;
