--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,6 +31,7 @@
   --iconColor: rgb(100, 45, 0);
   --border: 4px solid var(--borderColor);
   --borderRadius: 4px;
+  --boxShadow: rgb(115, 95, 30) 0px 2px 8px;
 }
 *,
 *::before,
