--- a/src/css/index.css
+++ b/src/css/index.css
@@ -62,6 +62,7 @@ body {
   /* padding: 2rem; */
   text-align: center;
   background-color: var(--bgColor);
+  color: var(--textColor);
   justify-content: center;
 }
 li {
@@ -73,24 +74,13 @@ h1 {
   line-height: 1.1;
 }
 
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6rem 1.2rem;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: var(--bgColor);
-  cursor: pointer;
-  transition: border-color 0.25s;
-} */
-button:hover {
+/* button:hover {
   border-color: var(--borderColor);
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+  outline: 4px auto var(--iconColor);
+} */
 
 /* @media (prefers-color-scheme: light) {
   :root {
