--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -1,6 +1,6 @@
 .btn {
-  /* border-radius: 8px; */
-  /* border: 1px solid transparent; */
+  border-radius: var(--borderRadius);
+  border: px solid transparent;
   padding: 0.6rem 1.2rem;
   font-size: 1rem;
   font-weight: 500;
