adding responsive search container

--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -9,6 +9,8 @@
   cursor: pointer;
   color: var(--textColor);
   transition: border-color 0.25s;
+  width: fit-content;
+  margin: 0.2rem;
 }
 .btn:hover {
   background-color: var(--hoverColor);
