--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,11 +8,12 @@
 }
 /* @media screen and (max-width: 425px) {
   .main {
-    margin-top: 30vh;
-  }
-}
-@media screen and (max-width: 330px) {
-  .main {
-    margin-top: 40vh;
+    margin-top: 10vh;
   }
 } */
+@media screen and (max-width: 330px) {
+  .main {
+    margin-top: 10vh;
+    width: 100%;
+  }
+}
