--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,7 +4,9 @@
   flex-direction: column;
   width: 100vw;
   justify-content: center;
-  margin-top: 11vh;
+  margin-top: 3vh;
+  height: 100vh;
+  max-width: 1280px;
 }
 /* @media screen and (max-width: 425px) {
   .main {
