--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,7 @@
   width: 100vw;
   justify-content: center;
   margin-top: 12vh;
-  height: 100vh;
+  /* height: 100vh; */
   max-width: 1280px;
 }
 /* @media screen and (max-width: 425px) {
