Implement dynamic data fetching with useFetchDrinks hook
- Replaced static data fetching logic with dynamic fetching using useFetchDrinks.
- Updated IngredientPage and SearchPage to utilize the useFetchDrinks hook for fetching data based on query and ingredient parameters.
- Refactored PaginationListPage to handle paginated data.
- Ensured components handle loading and error states properly.

--- a/src/css/CocktailInfoPage.css
+++ b/src/css/CocktailInfoPage.css
@@ -111,7 +111,7 @@
   color: var(--textColor);
   text-wrap: pretty;
   word-wrap: break-word;
-  word-break: normal;
+  word-break: break-word;
   width: 100%;
 }
 .ingredient-wrapper {
