Enhance UI with CSS Animations and Pagination Improvements
Added CSS animations to animate cards when they enter the view on scroll. This improves the visual appeal and user experience of the card components.

Implemented ellipses in the pagination component to handle large numbers of pages more gracefully. Note: some minor issues with the ellipses need to be fixed later.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -57,13 +57,11 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-
-  /* margin: 0 auto; */
-  /* padding: 2rem; */
   text-align: center;
   background-color: var(--bgColor);
   color: var(--textColor);
   justify-content: center;
+  overflow-x: hidden;
 }
 li {
   list-style: none;
