--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -44,15 +44,32 @@
   padding: 0.4rem;
   /* margin-bottom: 1rem; */
 }
-/* .drink-wrapper {
-  width: 100%;
-} */
+
 .drink-wrapper ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   /* border: 2px solid red; */
   margin: 1rem;
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.5;
+    /* transform: translateX(-100px); */
+    /* clip-path: inset(100% 100% 0 0); */
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0%);
+    /* scale: 1; */
+    /* clip-path: inset(0 0 0 0); */
+  }
+}
+.view {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
 }
 .ingredient-back {
   margin-block: 0.4rem;
